--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "private": true,
-  "name": "discord-pomelo-sniper",
+  "name": "discord-name-sniper",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/src/index"
+    "start": "tsc && node dist/index",
+    "build": "tsc && nexe dist/index --output=\"dist/executables/discord-name-sniper\" -t \"windows-x86\" --build"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
@@ -13,6 +14,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "discord.js": "^14.11.0",
+    "nexe": "^4.0.0-rc.2",
     "winston": "^3.8.2"
   }
 }
